--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,19 @@
+html,body{
+	height:100%;
+	background: rgb(211,231,162);
+	  /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(left top, rgb(211,231,162), 
+rgb(223,231,28) ); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(bottom right, rgb(211,231,162), 
+rgb(223,231,28) ); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(bottom right, rgb(211,231,162), 
+rgb(223,231,28) ); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(to bottom right, rgb(211,231,162), 
+rgb(223,231,28) ); /* Standard syntax */
+}
+
 .gify-image{
 	height:300px;
 	padding:2%;
-	
+
 }
