--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,19 +1,22 @@
 html,body{
 	height:100%;
+	color:rgb(150,51,44);
+	font-family: 'Ruluko', sans-serif;
 	background: rgb(211,231,162);
+	font-size: 20px;
 	  /* For browsers that do not support gradients */
-  background: -webkit-linear-gradient(left top, rgb(211,231,162), 
-rgb(253,175,95)
- ); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(bottom right, rgb(211,231,162), 
-rgb(253,175,95)
- ); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(bottom right, rgb(211,231,162), 
-rgb(253,175,95)
- ); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(to bottom right, rgb(211,231,162), 
-rgb(253,175,95)
- ); /* Standard syntax */
+	  background: -webkit-linear-gradient(left top, rgb(211,231,162), 
+	rgb(253,175,95)
+	 ); /* For Safari 5.1 to 6.0 */
+	  background: -o-linear-gradient(bottom right, rgb(211,231,162), 
+	rgb(253,175,95)
+	 ); /* For Opera 11.1 to 12.0 */
+	  background: -moz-linear-gradient(bottom right, rgb(211,231,162), 
+	rgb(253,175,95)
+	 ); /* For Firefox 3.6 to 15 */
+	  background: linear-gradient(to bottom right, rgb(211,231,162), 
+	rgb(253,175,95)
+	 ); /* Standard syntax */
 }
 
 .gify-image{
